Fix nav toggle button on really small screens.
It was overlapping the title text.

--- a/css/main.css
+++ b/css/main.css
@@ -166,7 +166,6 @@ nav a.selected {
     right: 0;
     padding: 9px 10px;
     margin-top: 1em;
-    margin-right: 1em;
     background-color: transparent;
     border: 1px solid #340644;
     border-radius: 4px;
